--- a/styles/global.css
+++ b/styles/global.css
@@ -35,3 +35,7 @@ body {
   height: 1.2em !important;
   width: 1.2em !important;
 }
+
+body {
+  font-family: 'Pretendard', -apple-system, sans-serif;
+}
